--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,17 @@ services:
     image: url_shortener:test
     container_name: url_shortener_server
     environment:
-      SERVER_HOST: ${SERVER_HOST:-}
-      SERVER_PORT: ${SERVER_PORT:-16000}
+      SERVER_PORT: ${SERVER_PORT:-80}
+      REDIRECT_SERVE_URL: ${REDIRECT_SERVE_URL:-http://localhost}
       MYSQL_SERVER_ADDR: ${MYSQL_SERVER_ADDR:-db:3306}
       MYSQL_SERVER_ROOT_PASSWORD: ${MYSQL_SERVER_ROOT_PASSWORD:-test_url_shortener}
       REDIS_SERVER_ADDR: ${REDIS_SERVER_ADDR:-cache:6379}
+
     depends_on:
       - db
       - cache
     ports:
-      - 16000:16000
+      - 80:80
     networks:
       - url_shortener_application
 
@@ -23,6 +24,10 @@ services:
     container_name: url_shortener_redis_cache
     networks:
       - url_shortener_application
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      timeout: 10s
+      retries: 10
 
   db:
     image: mysql:8.0
@@ -34,6 +39,10 @@ services:
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - data-volume:/var/lib/mysql
+    healthcheck:
+      test: [ "CMD", 'mysqladmin', 'ping', '-h', 'localhost', '-u', 'root', '-p$$MYSQL_ROOT_PASSWORD' ]
+      timeout: 10s
+      retries: 10
 
 networks:
   url_shortener_application:
