--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: "3"
 
 services:
   server:
-    image: url_shortener
+    image: ${URL_SHORTENER_IMAGE:-url_shortener}
     container_name: url_shortener_server
     environment:
       SERVER_PORT: ${SERVER_PORT:-80}
-      REDIRECT_SERVE_URL: ${REDIRECT_SERVE_URL:-http://localhost}
+      REDIRECT_SERVE_ENDPOINT: ${REDIRECT_SERVE_ENDPOINT:-http://localhost}
       MYSQL_SERVER_ADDR: ${MYSQL_SERVER_ADDR:-db:3306}
       MYSQL_SERVER_ROOT_PASSWORD: ${MYSQL_SERVER_ROOT_PASSWORD:-test_url_shortener}
       REDIS_SERVER_ADDR: ${REDIS_SERVER_ADDR:-cache:6379}
@@ -15,7 +15,7 @@ services:
       - db
       - cache
     ports:
-      - 80:${SERVER_PORT:-80}
+      - ${EXTERNAL_SERVER_PORT:-80}:${SERVER_PORT:-80}
     networks:
       - url_shortener_application
 
