add tests for parallel runs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       MYSQL_SERVER_ADDR: ${MYSQL_SERVER_ADDR:-db:3306}
       MYSQL_SERVER_ROOT_PASSWORD: ${MYSQL_SERVER_ROOT_PASSWORD:-test_url_shortener}
       REDIS_SERVER_ADDR: ${REDIS_SERVER_ADDR:-cache:6379}
+      REDIS_SERVER_ADMIN_PASSWORD: ${REDIS_SERVER_ADMIN_PASSWORD:-}
+      CHECK_EXPIRATION_INTERVAL: ${CHECK_EXPIRATION_INTERVAL:-60}
 
     depends_on:
       - db
